updating docs, cleanups and minor fixes

--- a/docs/database/Serverless.ipynb
+++ b/docs/database/Serverless.ipynb
@@ -12,12 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ff22a40d-e700-4a1a-9402-f48f509dcf1d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-12-29_16:41:07,289 INFO     [__init__.py:61] Switched to \"cflike\"\n"
+     ]
+    }
+   ],
    "source": [
     "from h5rdmtoolbox import database as h5db\n",
     "from h5rdmtoolbox import tutorial\n",
@@ -39,10 +47,273 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b221f7e9-e805-402c-8196-4ee099406c9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5tb-unit {\r\n",
+       "    width: 96px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: right;\r\n",
+       "    color: #555;\r\n",
+       "    font-style: italic;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: #fff;\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #555;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: #fff;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-highlight {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "    cursor: pointer;\r\n",
+       "}</style></head>\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--4396862400\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4396862400\">\n",
+       "                        /<span>(2)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">project : tutorial</li>\n",
+       "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/velocity-4398955800\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/velocity-4398964700\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' \n",
+       "                    for=\"ds-2-/velocity-4398964700\">velocity</label>\n",
+       "                <span class=\"h5tb-dims\">(3,) (int32)</span> [m/s]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "\n",
+       "                    </ul>\n",
+       "\n",
+       "                 </ul>\n",
+       "                 \n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds-sub-4399817500\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds-sub-4399817500\">\n",
+       "                        sub<span>(1)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\">\n",
+       "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/sub/velocity-4400402700\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/sub/velocity-4400405400\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' \n",
+       "                    for=\"ds-2-/sub/velocity-4400405400\">velocity</label>\n",
+       "                <span class=\"h5tb-dims\">(5,) (int32)</span> [m/s]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "\n",
+       "                    </ul>\n",
+       "\n",
+       "                 </ul>\n",
+       "                 \n",
+       "</li>\n",
+       "</ul>\n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.attrs['project'] = 'tutorial'\n",
@@ -64,10 +335,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "410d8841-76f7-4db2-8c54-e7c67c46c79e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "find basename=velocity in root:\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "\n",
+      "find name=/velocity in root:\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "\n",
+      "find name=/sub/velocity in root:\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
+      "\n",
+      "find basename=velocity in sub/:\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
+      "\n",
+      "find basename=velocity in root:\n",
+      "[<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n",
+      "\n",
+      "find basename=velocity in root:\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print('find basename=velocity in root:')\n",
@@ -86,10 +383,26 @@
     "    pprint(h5.find({'$basename': 'velocity'}, '$dataset', rec=False))\n",
     "    \n",
     "    print('\\nfind basename=velocity in root:')\n",
-    "    pprint(h5.find({'$basename': 'velocity'}, '$dataset', rec=True))\n",
-    "    \n",
-    "    # print(h5.find({'$name': '/operation_point/ptot'}, '$dataset'))\n",
-    "    # print(h5.find({'$basename': 'operation_point'}, '$group'))"
+    "    pprint(h5.find({'$basename': 'velocity'}, '$dataset', rec=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4c8a143b-6424-408b-8ad1-8569e0620f4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 wrapper group \"/sub\" (members: 1, convention: \"cflike\")>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    pprint(h5.find({'$basename': {'$regex': 'sub'}}, '$group', rec=False))"
    ]
   },
   {
@@ -102,10 +415,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b1f58db2-0660-40a5-8563-2370c31ecb92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    pprint(h5.find_one({'$basename': 'velocity'}, '$dataset'))"
@@ -121,10 +442,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "214dce12-b722-469b-b6d8-5412830c0ccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">]\n",
+      "[<HDF5 dataset \"velocity\": shape (5,), type \"<i4\", convention \"cflike\">,\n",
+      " <HDF5 dataset \"velocity\": shape (3,), type \"<i4\", convention \"cflike\">]\n"
+     ]
+    }
+   ],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    pprint(h5.find({'$shape': (5,)}, '$dataset'))\n",
