--- a/docs/wrapper/DumpFile.ipynb
+++ b/docs/wrapper/DumpFile.ipynb
@@ -54,14 +54,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71accad5-9c9e-4bb6-80e6-c526725ff3de",
+   "metadata": {},
+   "source": [
+    "## Multi-file inspection\n",
+    "\n",
+    "To inspect multiple files simultaneous, use `H5Files` instead of `H5File`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b06989f9-7094-4a7f-bbcd-c570005e3159",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "with h5tbx.H5Files(list_of_hdf_filenames[0:2]) as h5files:\n",
     "    print(h5files)\n",
     "    h5files[0].dump()\n",
