--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -6,7 +6,11 @@
    "metadata": {},
    "source": [
     "## Group creation\n",
-    "Is not much different except that you can pass a `long_name` and additional attributes."
+    "The default group creation is not much different except that you can optionally pass attributes as a dictionary during goup initialization.\n",
+    "\n",
+    "Furthermore, it is also possible to overwrite an existing group by passing `overwrite=True`.\n",
+    "\n",
+    "If the group should not be overwritten but the only the attributes, pass `update_attrs=True`. Note, that this will update the existing matching attributes."
    ]
   },
   {
@@ -18,7 +22,9 @@
    },
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "\n",
+    "h5tbx.use('default')"
    ]
   },
   {
@@ -32,8 +38,21 @@
    "source": [
     "with h5tbx.H5File() as h5:\n",
     "    h5.create_group('mygrp')\n",
-    "    h5.create_group('othergrp', long_name='my other group', attrs=dict(one=2, two='a second attr'))\n",
-    "    print(h5.hdf_filename)"
+    "    h5.create_group('mygrp', overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f13b927e-361f-46e8-aeea-e9a0c1505371",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_group('mygrp', attrs=dict(one=2, two='a second attr'))\n",
+    "    \n",
+    "    # create the same group again but indicate that only the attributes should be overwritten:\n",
+    "    h5.create_group('mygrp', attrs=dict(one=2, two='a second attr which is overwritten'), update_attrs=True)"
    ]
   },
   {
@@ -58,6 +77,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70a68b4a-6715-46ff-889d-fcc1a7f7ec3a",
+   "metadata": {},
+   "source": [
+    "The equivalent could be achieved by using the `find` query - in fact it is called in the method `get_groups()` (More on `find()` can be found [here](../database/Serverless.ipynb))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b9edd387-e3a2-49b9-b51d-cf1da347c803",
@@ -65,7 +92,7 @@
    "outputs": [],
    "source": [
     "with h5tbx.H5File(h5.hdf_filename) as h5:\n",
-    "    print(h5.get_groups(pattern='rgrp$'))"
+    "    print(h5.find({'$name': {'$regex': '.*'}}, rec=False))"
    ]
   },
   {
@@ -101,8 +128,27 @@
     "    test_filename = h5.filename  # or h5.hdf_filename\n",
     "\n",
     "with h5tbx.H5File(test_filename) as h5:\n",
-    "    h5.check(silent=False)"
+    "    print(h5.check())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a84fae2-9413-4afc-aa13-ee5ecc37531f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(test_filename) as h5:\n",
+    "    h5.layout.sdump()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b7c5cee-d7c3-43b9-89e8-ed44ba225620",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
