--- a/docs/wrapper/wrapper_and_conventions/cflike.ipynb
+++ b/docs/wrapper/wrapper_and_conventions/cflike.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# CF-like\n",
     "\n",
-    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `cflike`.\n",
+    "The cf-conventions ([cfconventions.org]) promote the usage of specific attributes in order to fully describe a variable (dataset). The `h5rdmtoolbox` at this stage implements the CF convention in a very simlar way. As it is probably not the 100% equivilant yet, we call the convention `cflike`. More details used naming within the convention can also be found [here](../../conventions/conventions.ipynb)\n",
     "\n",
     "The convention can be switched durng runtime. The default convention (means using no convention) is `default`, to switch to the CF-like call `use('cflike')`:\n",
     "\n",
@@ -24,13 +24,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-24_16:30:30,765 INFO     [__init__.py:40] Switched to cflike\n"
+      "2022-12-29_15:15:37,122 INFO     [__init__.py:61] Switched to \"cflike\"\n"
      ]
     }
    ],
    "source": [
     "import h5rdmtoolbox as h5tbx\n",
-    "h5tbx.use('cflike', force=True)"
+    "h5tbx.use('cflike')"
    ]
   },
   {
@@ -83,18 +83,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74e23701-6ed4-4d66-9eca-9f1f3cd982a7",
+   "metadata": {},
+   "source": [
+    "## File creation\n",
+    "\n",
+    "During file initialization, a `title` and `standard_name_table` can be passed:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "c71846c9-8cae-46f0-b144-88dc62eef6f8",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<HDF5 dataset \"velocity\": shape (), type \"<f8\", convention \"cflike\">\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -297,45 +300,17 @@
        "    background-color: rgba(3, 169, 244, .2);\r\n",
        "    cursor: pointer;\r\n",
        "}</style></head>\n",
-       "<p>tmp23.hdf</p>\n",
-       "\n",
        "<div class='h5tb-warp'>\n",
        "\n",
-       "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                <li>\n",
-       "                    <input id=\"group-ds-/-610697973000\" type=\"checkbox\" checked>\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/-610697973000\">\n",
-       "                    /<span>(2)</span></label>\n",
-       "              \n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--4398998300\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4398998300\">\n",
+       "                        /<span>(0)</span></label>\n",
+       "                  \n",
        "\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.2.0</li><li style=\"list-style-type: none; font-style: italic\">__wrcls__ : H5File</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
-       "                </ul>\n",
-       "\n",
-       "                    <ul id=\"ds-1-/velocity-610698741700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/velocity-610698744000\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
-       "                    <label class='h5tb-varname' \n",
-       "                        for=\"ds-2-/velocity-610698744000\">velocity</label>\n",
-       "                    <span class=\"h5tb-dims\"></span>  [\n",
-       "                    <span class=\"h5tb-unit\">m/s</span>]\n",
-       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
-       "         italic\">standard_name : x_velocity</li>\n",
-       "\n",
-       "                </ul>\n",
-       "\n",
-       "             </ul>\n",
-       "             \n",
-       "\n",
-       "          <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                <li>\n",
-       "                    <input id=\"group-ds-/testgrp-610698843600\" type=\"checkbox\" >\n",
-       "                    <label style=\"font-weight: bold\" for=\"group-ds-/testgrp-610698843600\">\n",
-       "                    testgrp<span>(0)</span></label>\n",
-       "              \n",
-       "\n",
-       "                <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : my test group</li>\n",
-       "                </ul>\n",
-       "</li>\n",
-       "</ul>\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    </ul>\n",
        "</li>\n",
        "</ul>\n",
        "</div>"
@@ -350,41 +325,355 @@
    ],
    "source": [
     "with h5tbx.H5File(title='MyFile') as h5:\n",
-    "    ds = h5.create_dataset('velocity', data=4.3, units='m/s', standard_name='x_velocity')\n",
-    "    print(ds)\n",
-    "    h5.create_group('testgrp', long_name='my test group')\n",
-    "    sn = ds.standard_name\n",
     "    h5.dump()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c6c5cce1-09b2-4c62-b3e9-db6a786b5072",
+   "cell_type": "markdown",
+   "id": "6bcc789b-2181-48b6-abc0-ef50a4389d03",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "StandardName(name='x_velocity', description=None, canonical_units=None, snt=EmptyStandardNameTable (version number: 0))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "sn"
+    "The standard name table (SNT) holds the definitions for the standard names. Per default, no specific standard is set (`EmptyStandardNameTable`). THis means that only basic naming rules are applied, such as that no spaces are allowe in standard names:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "744b5dec-9231-46d8-af84-2546450b3d76",
+   "execution_count": 4,
+   "id": "2d585105-b80e-4f3c-8476-92e90895bfc4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EmptyStandardNameTable\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File(title='MyFile') as h5:\n",
+    "    print(h5.standard_name_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36710f58-f300-4591-b9fb-a9d928a3a94a",
+   "metadata": {},
+   "source": [
+    "## Dataset Creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bd1fe8c7-2f3c-409e-8da4-cb2d78d1a5a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<head><style>/*\r\n",
+       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
+       "*/\r\n",
+       ".h5tb-header > div,\r\n",
+       ".h5tb-header > ul {\r\n",
+       "    display: inline;\r\n",
+       "    margin-top: 0;\r\n",
+       "    margin-bottom: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-cls,\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    margin-left: 2px;\r\n",
+       "    margin-right: 10px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataarray-name {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 3px;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections label {\r\n",
+       "    display: inline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label > span {\r\n",
+       "    display: inline;\r\n",
+       "    margin-left: 4px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label > span {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:enabled + label {\r\n",
+       "    cursor: pointer;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
+       "    display: none;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
+       "    display: block;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label {\r\n",
+       "    width: 140px;\r\n",
+       "    color: #555;\r\n",
+       "    font-weight: 500;\r\n",
+       "    padding: 4px 0 2px 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input + label:before {\r\n",
+       "    display: inline-block;\r\n",
+       "    content: '+';\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    text-align: center;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:disabled + label:before {\r\n",
+       "    color: #777;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5grp-sections > li > input:checked + label:before {\r\n",
+       "    content: '-';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list {\r\n",
+       "    display: inline-block !important;\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li {\r\n",
+       "    display: inline-block;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:before {\r\n",
+       "    content: '(';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list:after {\r\n",
+       "    content: ')';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-list li:not(:last-child):after {\r\n",
+       "    content: ',';\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-has-index {\r\n",
+       "    text-decoration: underline;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list {\r\n",
+       "    list-style: none;\r\n",
+       "    padding: 0;\r\n",
+       "    margin: 0;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li {\r\n",
+       "    background-color: #fcfcfc;\r\n",
+       "    overflow: hidden;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list > li:nth-child(odd) {\r\n",
+       "    background-color: #efefef;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li:hover {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-var-list li > span {\r\n",
+       "    display: inline-block;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label {\r\n",
+       "    width: 140px;\r\n",
+       "    padding-left: 0;\r\n",
+       "    font-weight: bold;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dataset {\r\n",
+       "    width: 100px;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attributevalue {\r\n",
+       "    width: 100px;\r\n",
+       "    text-align: left;\r\n",
+       "    color: #888;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    font-size: 12px;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in + label:before {\r\n",
+       "    content: ' ';\r\n",
+       "    display: inline-block;\r\n",
+       "    font-size: 11px;\r\n",
+       "    width: 15px;\r\n",
+       "    padding-left: 2px;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: center;\r\n",
+       "    color: #aaa;\r\n",
+       "    text-decoration: none !important;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
+       "    color: #000;\r\n",
+       "}\r\n",
+       "\r\n",
+       "input.h5tb-varname-in:checked + label:before {\r\n",
+       "    color: #ccc;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dims {\r\n",
+       "    width: 280px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       "\r\n",
+       "\r\n",
+       ".h5tb-unit {\r\n",
+       "    width: 96px;\r\n",
+       "    white-space: nowrap;\r\n",
+       "    padding-right: 2px;\r\n",
+       "    text-align: right;\r\n",
+       "    color: #555;\r\n",
+       "    font-style: italic;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list {\r\n",
+       "    list-style: none;\r\n",
+       "    background-color: #fff;\r\n",
+       "    padding-bottom: 6px;\r\n",
+       "    color: #555;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-attr-list li,\r\n",
+       ".h5tb-attr-list li:hover {\r\n",
+       "    background-color: #fff;\r\n",
+       "}\r\n",
+       "\r\n",
+       ".h5tb-dim-highlight {\r\n",
+       "    background-color: rgba(3, 169, 244, .2);\r\n",
+       "    cursor: pointer;\r\n",
+       "}</style></head>\n",
+       "<div class='h5tb-warp'>\n",
+       "\n",
+       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
+       "                    <li>\n",
+       "                        <input id=\"group-ds--4452626000\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--4452626000\">\n",
+       "                        /<span>(3)</span></label>\n",
+       "                  \n",
+       "\n",
+       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.3.0a1</li><li style=\"list-style-type: none; font-style: italic\">title : MyFile</li>\n",
+       "                    </ul>\n",
+       "\n",
+       "                <ul id=\"ds-1-/method-4453513200\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/method-4453518100\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' \n",
+       "                for=\"ds-2-/method-4453518100\">method</label>: b'linear_interpolation'\n",
+       "                \n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">long_name : The inteprolation method used for something.</li>\n",
+       "\n",
+       "                    </ul>\n",
+       "\n",
+       "                 </ul>\n",
+       "                 \n",
+       "\n",
+       "                <ul id=\"ds-1-/u-4453897300\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/u-4453901300\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' \n",
+       "                    for=\"ds-2-/u-4453901300\">u</label>\n",
+       "                <span class=\"h5tb-dims\">1.2 (float64)</span> [m/s]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "             italic\">standard_name : x_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "\n",
+       "                    </ul>\n",
+       "\n",
+       "                 </ul>\n",
+       "                 \n",
+       "\n",
+       "                <ul id=\"ds-1-/v-4457963600\" class=\"h5tb-var-list\">\n",
+       "                <input id=\"ds-2-/v-4457968800\" class=\"h5tb-varname-in\" type=\"checkbox\">\n",
+       "                <label class='h5tb-varname' \n",
+       "                    for=\"ds-2-/v-4457968800\">v</label>\n",
+       "                <span class=\"h5tb-dims\">(3,) (int32)</span> [m/s]\n",
+       "<ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style:\n",
+       "             italic\">standard_name : y_velocity</li><li style=\"list-style-type: none; font-style: italic\">units : m/s</li>\n",
+       "\n",
+       "                    </ul>\n",
+       "\n",
+       "                 </ul>\n",
+       "                 \n",
+       "</li>\n",
+       "</ul>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File(title='MyFile') as h5:\n",
+    "    h5.create_dataset('u', data=1.2, units='m/s', standard_name='x_velocity')\n",
+    "    h5.create_dataset('v', data=[1,2,3], units='m/s', standard_name='y_velocity')\n",
+    "    h5.create_dataset('method', data=\"linear_interpolation\",\n",
+    "                      long_name='The inteprolation method used for something.')\n",
+    "    h5.dump()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1842beb1-10ed-404c-af69-4674ab9c255f",
+   "metadata": {},
+   "source": [
+    "## Group creation\n",
+    "\n",
+    "In addition to the standard way of creating groups, a `long_name` can be passed. It is optional, though:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8516e747-447b-4d13-806a-7e1b11cbdada",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[3ma: __h5rdmtoolbox_version__\u001b[0m: 0.3.0a1\n",
+      "/\u001b[1mmygrp\u001b[0m\n",
+      "/\u001b[1mothergrp\u001b[0m\n",
+      "  \u001b[3ma: long_name\u001b[0m: my other group\n"
+     ]
+    }
+   ],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_group('mygrp')\n",
+    "    h5.create_group('othergrp', long_name='my other group')\n",
+    "    h5.sdump()"
+   ]
   }
  ],
  "metadata": {
