--- a/docs/wrapper/CreateFile.ipynb
+++ b/docs/wrapper/CreateFile.ipynb
@@ -5,62 +5,61 @@
    "id": "c2e79c7c-cc3e-47ff-a85c-78f500ff63f7",
    "metadata": {},
    "source": [
-    "# Create a HDF file\n",
+    "# Create an HDF file\n",
     "\n",
-    "To work with HDF5 files, the \"wrapper\"-class `H5File` is used (equiilant to `h5py.File`).\n",
-    "\n",
-    "There are several ways to open a file with this package.<br>\n",
-    "First thing to note, is that we don't need to specify a filename when calling the the class. Instead a temporary file will be generated. Like this, the default mode is `r+`:"
+    "To work with HDF5 files, the \"wrapper\"-class `H5File` is used (quivilant to `h5py.File`)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f0ec5083-bfc0-46b9-9627-299cbd842838",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "h5tbx.use('default')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e73ec28-d197-4086-ba25-766c188befbf",
+   "metadata": {},
+   "source": [
+    "Creating a file does not require filename. If not specified, a temporary file is created. In this case the file-`mode` is `r+`, otherwise and if not specified, the defualt opening mode is `r` (read-only):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3b363c60-21f7-408f-89b6-7fc9a77a6d3b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tmp0.hdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h5 = h5tbx.H5File()  # note, not passing `mode` while the filename does not exist: 'r+' is used, otherwise defaultis 'r'\n",
+    "h5 = h5tbx.H5File()\n",
+    "print(h5.mode)\n",
     "h5.close()\n",
-    "print(h5.hdf_filename.name)  # equal to h5.filename but a pathlib.Path and exists also after file is closed"
+    "print(h5.hdf_filename.name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36e23915-bc58-406f-85aa-7c77cae44937",
+   "metadata": {},
+   "source": [
+    "Note, that instead of using `filename`, `hdf_filename` is used. It is provided as an additional property. By using the `pathlib.Path` object some useful operations are possible. Also this property is available even if the file is closed."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "91fbac7b-de16-451b-a498-ef5af6f88529",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tmp2.hdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "h5 = h5tbx.H5File()  # note, not passing `mode` while the filename does not exist: 'r+' is used, otherwise defaultis 'r'\n",
-    "h5.close()\n",
-    "print(h5.hdf_filename.name)  # equal to h5.filename but a pathlib.Path and exists also after file is closedNote, that we have an additional property `hdf_filename`, which in contrast to `filename` works also even if the clss is closed.\n"
+    "h5 = h5tbx.H5File(h5.hdf_filename)\n",
+    "print(h5.mode)\n",
+    "h5.close()"
    ]
   },
   {
@@ -75,24 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "34b7e026-3f38-494c-bd86-17c786c3ecbb",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test.hdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.H5File('test.hdf', 'w') as h5:\n",
-    "    print(h5.hdf_filename.name)\n",
-    "h5.hdf_filename.unlink()  # it's a pathlib.Path object, thus easy to delete"
+    "    print(h5.hdf_filename.name)"
    ]
   },
   {
@@ -100,13 +90,31 @@
    "id": "48435b36-4615-4418-83fd-da302b937f80",
    "metadata": {},
    "source": [
-    "To inspect the file content, please visit the [file content visualization notebook](DumpFile.ipynb)"
+    "Note: To inspect the file content, please visit the [file content visualization notebook](DumpFile.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d0d7a409-9a18-4ec6-8406-8a63f68b0cac",
+   "metadata": {},
+   "source": [
+    "As stated above, the `hdf_filename` is a `pathlib.Path` object. Deleting the file is hence very simple:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4d8a079-04aa-4b88-b77b-70ca09f0861c",
+   "id": "58c032e2-f964-4d2b-bdfd-6666a66948a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5.hdf_filename.unlink()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f13c36b-1d6d-4ee5-a2c1-3fa19c242626",
    "metadata": {},
    "outputs": [],
    "source": []
